# omnivoice-studio

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/: safety.md  setup.md
notebooks/: OmniVoice_Gradio.ipynb
scripts/: run_colab.py  run_local.sh
src/omnivoice_studio/: __init__.py  config.py  ui.py  utils.py
