[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "omnivoice-studio"
version = "0.1.0"
description = "A proper local/Colab-ready project for OmniVoice voice cloning."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "omnivoice",
    "gradio",
    "python-dotenv",
]
